fix up non-literal format string issues

Fix up a couple of errors picked up by -Werror=format-nonliteral on
clang.

https://bugzilla.gnome.org/show_bug.cgi?id=720082